# amaniquery

./: .dockerignore  .env.example  .gitignore  .huggingfaceignore  BACKEND_CONFIGURATION_REVIEW.md  CODE_DOCUMENTATION_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_QUICKREF.md  DOCKER_README.md  Dockerfile  Dockerfile.api  Dockerfile.huggingface  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  deploy_to_hf.py  docker-compose.blueprint.yml  docker-compose.prod.yml  docker-compose.yml  download_model.py  llms.txt  migrate_auth_db.py  migrate_db.py  populate_qdrant.py  refresh_data.py  render.yaml  requirements.txt  reset_database.py  seed_admin_user.py  setup.py  start_api.py  start_scheduler.py  test_rag.py  upload_data.py  upload_hf_secrets.py  verify_fast_router.py
Module4_NiruAPI/: README.md  VERCEL_README.md  __init__.py  adaptive_rag_pipeline.py  alignment_pipeline.py  amanibench_generator.py  api.py  app.py  cache.py  config_manager.py  crawler_manager.py  crawler_models.py  pyproject.toml  rag_pipeline.py  report_generator.py  requirements.txt  research_module.py  research_module_agentic.py  sms_pipeline.py  sms_service.py  vercel.json  vercel_app.py
Module4_NiruAPI/agents/: AMANIQ_V1_README.md  JSON_ENFORCER_GUIDE.md  README.md  __init__.py  ak_rag_graph.py  amaniq_v0.py  amaniq_v1.py  amaniq_v2.py  dataset_generator.py  generate_training_data.py  integration_example.py  intent_router.py  json_enforcer.py  kenyanizer.py  optimization.py  prefetch.py  quality_scorer.py  retrieval_strategies.py  sheng_translator.py  state_machine.py  task_clustering.py  types.py  (+1 more)
(+604 files in other folders)
